jenkins/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: jenkins-app
