jenkins/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* "/blue(/.*)") {
        proxy_pass http://upstream_balancer/blue$1; 
        break;
      }
spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.amoylabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port: 
              number: 8080
